--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <shedlock.version>6.3.0</shedlock.version>
     </properties>
 
     <dependencies>
@@ -55,6 +56,11 @@
             <groupId>io.github.wimdeblauwe</groupId>
             <artifactId>error-handling-spring-boot-starter</artifactId>
             <version>4.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
+            <version>${shedlock.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
