change table suffix

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+      naming:
+        physical-strategy: me.sathish.runswithshedlock.config.RunswithshedlockNamingStrategy
     open-in-view: false
     properties:
       hibernate:
