--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runswithshedlock-frontend",
-  "author": "Bootify.io",
+  "author": "dotsky",
   "scripts": {
     "devserver": "webpack serve --open --mode development",
     "build": "webpack --mode production"
