--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/runswithshedlock}
-    username: ${JDBC_DATABASE_USERNAME:postgres}
-    password: ${JDBC_DATABASE_PASSWORD:<<YOUR_PASSWORD>>}
+    url: ${garmindb}
+    username: ${darmindb_user}
+    password: ${darmindb_password}
     hikari:
       connection-timeout: 30000
       maximum-pool-size: 10
@@ -43,3 +43,5 @@ management:
       show-details: always
 springdoc:
   pathsToMatch: /home, /api/**
+server:
+  port: 9080
