--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ error:
     codes:
       RunnerUsernameUnique: RUNNER_USERNAME_UNIQUE
       RunnerEmailUnique: RUNNER_EMAIL_UNIQUE
+      RunEventRunIdUnique: RUN_EVENT_RUN_ID_UNIQUE
 management:
   endpoints:
     web:
