Publish Event Data

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,6 @@ spring:
     port: ${RABBITMQ_PORT:5672}
     username: ${RABBITMQ_USERNAME:guest}
     password: ${RABBITMQ_PASSWORD:guest}
-
   datasource:
     url: ${garmindb}
     username: ${darmindb_user}
@@ -52,8 +51,7 @@ springdoc:
   pathsToMatch: /home, /api/**
 server:
   port: 9080
-
 garminrun-event:
   garmin-exchange: garminrun-event-exchange
-  garmin-newrun-queue: garminrun-newrun-queue
+  garmin-newrun-queue: garminrun-run-queue
   garmin-error-queue: garminrun-error-queue
