Changes to the scheduler

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,6 @@ garminrun-event:
   garmin-exchange: garminrun-event-exchange
   garmin-newrun-queue: garminrun-newrun-queue
   garmin-error-queue: garminrun-error-queue
+runswithshedlock:
+  processRunEvents:
+    fixedRate: 10000
