--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <java.version>21</java.version>
         <shedlock.version>6.3.0</shedlock.version>
         <spotless.version>2.40.0</spotless.version>
+        <faker.version>1.0.2</faker.version>
+        <springdoc.version>2.8.6</springdoc.version>
+        <plantir.version>2.38.0</plantir.version>
+        <node.version>v22.16.0</node.version>
+        <frontend-maven-plugin.version>1.15.1</frontend-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -72,6 +77,13 @@
             <version>${shedlock.version}</version>
         </dependency>
         <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>${shedlock.version}</version>
+
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
@@ -86,12 +98,12 @@
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
+            <version>${faker.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.6</version>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -146,7 +158,7 @@
                 <configuration>
                     <java>
                         <palantirJavaFormat>
-                            <version>2.38.0</version>
+                            <version>${plantir.version}</version>
                         </palantirJavaFormat>
                         <importOrder />
                         <removeUnusedImports />
@@ -180,7 +192,7 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.15.1</version>
+                <version>${frontend-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>nodeAndNpmSetup</id>
@@ -208,7 +220,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <nodeVersion>v22.16.0</nodeVersion>
+                    <nodeVersion>${node.version}</nodeVersion>
                 </configuration>
             </plugin>
         </plugins>
